@@ -26,6 +26,11 @@ configure(allprojects) { Project project ->
 		}
 	}
 
+	tasks.withType(JavaCompile).configureEach {
+		options.release = 25
+		options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation']
+	}
+
 	idea {
 		module {
 			downloadSources = true
@@ -39,6 +44,7 @@ configure(allprojects) { Project project ->
 
 	repositories {
 		mavenCentral()
+		maven { url 'https://repo.spring.io/milestone' }
 		maven {
 			url = uri("${repoUrl}")
 			credentials {
@@ -73,8 +79,19 @@ configure(libProjs) {
 configure(bootProjs) {
 	apply plugin: 'org.springframework.boot'
 
+	configurations.all {
+		resolutionStrategy {
+			force "com.google.protobuf:protobuf-java:${protobufVersion}"
+		}
+	}
+
 	dependencies {
 		implementation platform(SpringBootPlugin.BOM_COORDINATES)
+		implementation platform("com.google.protobuf:protobuf-bom:${protobufVersion}")
+	}
+
+	bootRun {
+		jvmArgs '--enable-native-access=ALL-UNNAMED'
 	}
 }
 
