@@ -7,14 +7,15 @@ dependencies {
 	implementation "io.projectreactor:reactor-core:${projectReactorVersion}"
 	implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
 
-	implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"
-
 	implementation(project(":jenie-spring-helloworld-web"))
 }
 
 jib {
 	from {
 		image = 'eclipse-temurin:25'
+	}
+	container {
+		jvmFlags = ['--enable-native-access=ALL-UNNAMED']
 	}
 	to {
 		image = 'ghcr.io/thinkhard-j-park/jenie-spring-helloworld-armeria-grpc'
